--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "generate-array",
+  "name": "generate-arrays",
   "version": "0.0.2",
   "description": "Easily generate arrays with a huge amount of potential parameters",
   "author": "Reid Moffat <reid.moffat9@gmail.com>",
