src dir for code

--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "types": "dist/index.d.ts",
   "scripts": {
     "lint": "tsc",
-    "build": "tsup index.ts --format cjs,esm --dts --minify",
+    "build": "tsup src/index.ts --format cjs,esm --dts --minify",
     "test": "echo \"Error: no test specified\" && exit 1",
     "publish": "npm publish --access=public"
   },
