--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -5,7 +5,7 @@ on:
       - "**"
 
 jobs:
-  build:
+  test:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
@@ -26,3 +26,6 @@ jobs:
         run: pnpm run lint
       - name: Build
         run: pnpm run build
+
+      - name: Run tests
+        run: pnpm run test
