--- a/.mocharc.json
+++ b/.mocharc.json
@@ -1,7 +1,5 @@
 {
-  "extension": [
-    "ts"
-  ],
+  "extension": ["ts"],
   "spec": "./test/**/*{.js,.ts}",
   "require": [
     "ts-node/register"
