--- a/.mocharc.json
+++ b/.mocharc.json
@@ -1,9 +1,7 @@
 {
+  "require": "ts-node/register",
   "extension": ["ts"],
-  "spec": "./test/**/*{.js,.ts}",
-  "require": [
-    "ts-node/register"
-  ],
+  "spec": "./test/**/*.test{.js,.ts}",
   "node-option": [
     "loader=ts-node/esm"
   ],
