--- a/package.json
+++ b/package.json
@@ -54,9 +54,5 @@
     "url": "https://github.com/reid-moffat/generate-arrays.git"
   },
   "bugs": "https://github.com/reid-moffat/generate-arrays/issues",
-  "packageManager": "pnpm@9.6.0",
-  "engines": {
-    "node": ">=18.0.0",
-    "npm": ">=9.0.0"
-  }
+  "packageManager": "pnpm@9.6.0"
 }
