--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "generate-arrays",
   "version": "0.0.5",
-  "description": "Easily generate arrays with a huge amount of potential parameters",
+  "description": "Dead simple, lightweight and flexible array generation",
   "author": "Reid Moffat <reid.moffat9@gmail.com>",
   "license": "MIT",
   "keywords": [
