--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
   "scripts": {
     "test": "cross-env TS_NODE_PROJECT='./tsconfig.json' nyc mocha --ui tdd",
     "build": "tsup src/index.ts --format cjs,esm --dts --minify",
-    "deployHelp" : "echo \"1) Run 'changeset' 2) Merge changes to main 3) Merge changeset PR 4) npm run predeploy (verify it looks good) 5) npm run deploy\"",
+    "deployHelp": "echo \"1) Run 'changeset' 2) Merge changes to main 3) Merge changeset PR 4) npm run predeploy (verify it looks good) 5) npm run deploy\"",
     "predeploy": "npm run build && npm publish --dry-run",
     "deploy": "npm publish"
   },
@@ -42,9 +42,12 @@
   "devDependencies": {
     "@changesets/cli": "^2.27.7",
     "@types/chai": "^4.3.16",
+    "@types/microseconds": "^0.2.2",
     "@types/mocha": "^10.0.7",
+    "@types/node": "^22.1.0",
     "chai": "^5.1.1",
     "cross-env": "^7.0.3",
+    "microseconds": "^0.2.0",
     "mocha": "^10.7.0",
     "nyc": "^17.0.0",
     "ts-node": "^10.9.2",
