--- a/package.json
+++ b/package.json
@@ -31,9 +31,8 @@
   "scripts": {
     "test": "cross-env TS_NODE_PROJECT='./tsconfig.json' nyc mocha --ui tdd",
     "build": "tsup src/index.ts --format cjs,esm --dts --minify",
-    "deployHelp": "echo \"1) Run 'changeset' 2) Merge changes to main 3) Merge changeset PR 4) npm run predeploy (verify it looks good) 5) npm run deploy\"",
-    "predeploy": "npm run build && npm publish --dry-run",
-    "deploy": "npm publish"
+    "deployHelp": "echo \"1) Run 'changeset' 2) Merge changes to main 3) Merge changeset PR 4) npm run deploy (verify it looks good)\"",
+    "deploy": "npm run build && npm publish"
   },
   "files": [
     "CHANGELOG.md",
