--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
   "module": "dist/index.mjs",
   "types": "dist/index.d.ts",
   "scripts": {
+    "lint": "tsc",
     "test": "cross-env TS_NODE_PROJECT='./tsconfig.json' nyc mocha --ui tdd",
     "build": "tsup src/index.ts --format cjs,esm --dts --minify",
     "deployHelp": "echo \"1) Run 'changeset' 2) Merge changes to main 3) Merge changeset PR 4) npm run deploy (verify it looks good)\"",
