--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "license": "MIT",
   "keywords": [
     "array",
+    "arrays",
     "generate",
     "generator",
     "test",
@@ -17,12 +18,19 @@
     "fake data generator",
     "fake data",
     "fake-data",
-    "generate-array",
     "generate array",
     "generate arrays",
-    "generate-arrays",
+    "random-data",
+    "test-data",
+    "mock-data",
+    "fake-data-generator",
+    "utility",
+    "generate",
     "array generator",
-    "array-generate"
+    "random-array",
+    "multi-dimensional-array",
+    "array-generate",
+    "js-array-utils"
   ],
   "type": "module",
   "main": "dist/index.js",
