--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
   "types": "dist/index.d.ts",
   "scripts": {
     "lint": "tsc",
-    "test": "cross-env TS_NODE_PROJECT='./tsconfig.json' nyc mocha --ui tdd",
+    "test": "cross-env TS_NODE_PROJECT='./tsconfig.json' nyc mocha --ui tdd --reporter min",
     "build": "tsup src/index.ts --format cjs,esm --dts --minify",
     "deployHelp": "echo \"1) Run 'changeset' 2) Merge changes to main 3) Merge changeset PR 4) npm run deploy (verify it looks good)\"",
     "deploy": "git checkout main && git pull && npm run build && npm publish"
